docker-composeファイル、ホットリロード用の修正

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
       dockerfile: Dockerfile
     container_name: react-training
     environment:
-      - CHOKIDAR_USEPOLLING=true # ホットリロードの設定
+      # - CHOKIDAR_USEPOLLING=true # ホットリロード
+      - WATCHPACK_POLLING=true #上の設定だと動かない
     volumes:
       # - ./:/usr/src/app
       - ./react-training:/react-training
